add course cert equiv

--- a/program-information/modules/ROOT/nav.adoc
+++ b/program-information/modules/ROOT/nav.adoc
@@ -1,2 +1,3 @@
 * xref:index.adoc[Home]
 * xref:degree-course-sequencing.adoc[Degree Course Sequencing]
+* xref:certification-credit.adoc[ITC Course Credit Equivalency for IT Exams]
