--- a/program-information/modules/ROOT/franskecoursenav.adoc
+++ b/program-information/modules/ROOT/franskecoursenav.adoc
@@ -1,3 +1,3 @@
-* xref:franske-courses:index.adoc[ITC-2480 Home]
-** xref:franske-courses:syllabus.adoc[Syllabus]
-** xref:franske-courses:schedule.adoc[Schedule]
+* xref:franske-courses:itc-2480:index.adoc[ITC-2480 Home]
+** xref:franske-courses:itc-2480:syllabus.adoc[Syllabus]
+** xref:franske-courses:itc-2480:schedule.adoc[Schedule]
