rework navigation for program-info

--- a/franske-course-information/modules/ROOT/nav.adoc
+++ b/franske-course-information/modules/ROOT/nav.adoc
@@ -2,7 +2,5 @@
 * xref:program-info:index.adoc[ITC Program Information]
 
 .Dr. Franske's Course Pages
-+
---
+* xref:index.adoc[Home]
 include:itc-2480:partial$nav.adoc[]
---
