--- a/program-information/modules/ROOT/othernav.adoc
+++ b/program-information/modules/ROOT/othernav.adoc
@@ -1,2 +1,5 @@
-.Other Areas
-* xref:franske-courses:index.adoc[Dr. Franske's Course Pages]
+.xref:franske-courses:index.adoc[Dr. Franske's Course Pages]
+
+.Technical Information
+
+.Software Discounts and Resources
