rework navigation for franske-courses

--- a/program-information/modules/ROOT/othernav.adoc
+++ b/program-information/modules/ROOT/othernav.adoc
@@ -1,4 +1,4 @@
-.xref:franske-courses:index.adoc[Dr. Franske's Course Pages]
+.xref:franske-courses:ROOT:index.adoc[Dr. Franske's Course Pages]
 
 .Technical Information
 
