--- a/franske-course-information/modules/ROOT/nav.adoc
+++ b/franske-course-information/modules/ROOT/nav.adoc
@@ -1,6 +1,9 @@
-.Program Information
-* xref:program-info:index.adoc[ITC Program Information]
+.xref:program-info:ROOT:index.adoc[ITC Program Information]
 
 .Dr. Franske's Course Pages
 * xref:index.adoc[Home]
 include:itc-2480:partial$nav.adoc[]
+
+.Technical Information
+
+.Software Discounts and Resources
