--- a/program-information/modules/ROOT/navtop.adoc
+++ b/program-information/modules/ROOT/navtop.adoc
@@ -1,8 +1,8 @@
-* xref:index.adoc[Program Information]
+* xref:program-info:ROOT:index.adoc[Program Information]
 +
 --
 include::partial$nav.adoc[]
 --
 * xref:franske-courses:ROOT:index.adoc[Dr. Franske's Course Pages]
-* Technical Information
-* Software Discounts and Resources
+* xref:tech-info:ROOT:index.adoc[Technical Information]
+* xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
