--- a/technical-information/modules/ROOT/navtop.adoc
+++ b/technical-information/modules/ROOT/navtop.adoc
@@ -1,8 +1,8 @@
 * xref:program-info:ROOT:index.adoc[Program Information]
 * xref:franske-courses:ROOT:index.adoc[Dr. Franske's Course Pages]
+* xref:tech-info:ROOT:index.adoc[Technical Information]
 +
 --
-include::itc-2480:partial$nav.adoc[]
+include::partial$nav.adoc[]
 --
-* xref:tech-info:ROOT:index.adoc[Technical Information]
 * xref:software-info:ROOT:index.adoc[Software Discounts and Resources]
