--- a/franske-course-information/modules/itc-2480/partials/nav.adoc
+++ b/franske-course-information/modules/itc-2480/partials/nav.adoc
@@ -1,5 +1,5 @@
 * ITC-2480
-** xref:itc2480:index.adoc[Course Home]
-** xref:itc2480:syllabus.adoc[Syllabus]
-** xref:itc2480:schedule.adoc[Schedule]
-** xref:itc2480:assignments.adoc[Assignments]
+** xref:franske-courses:itc2480:index.adoc[Course Home]
+** xref:franske-courses:itc2480:syllabus.adoc[Syllabus]
+** xref:franske-courses:itc2480:schedule.adoc[Schedule]
+** xref:franske-courses:itc2480:assignments.adoc[Assignments]
