fix headings and footers

--- a/program-information/modules/ROOT/pages/certification-credit.adoc
+++ b/program-information/modules/ROOT/pages/certification-credit.adoc
@@ -93,3 +93,7 @@ Due to constantly evolving industry certifications specific exams are no longer 
 |IT Fundamentals
 |3
 |===
+
+[%hardbreaks]
+Document Build Time: {localdatetime}
+Page Version: {page-component-version}
